--- a/CodeMerger/MainWindow.xaml
+++ b/CodeMerger/MainWindow.xaml
@@ -42,7 +42,11 @@
         <!-- 実行ボタン -->
         <Button Grid.Row="4" Content="実行" Width="60"
                 HorizontalAlignment="Left" Background="#3377cc" Foreground="White"
-                Click="Execute_Click" Margin="319,7,0,34" Grid.RowSpan="2" />
+                Click="Execute_Click" Margin="0,5,0,34" Grid.RowSpan="2" />
+
+        <Button Grid.Row="4" Content="出力先を表示" Width="100"
+                HorizontalAlignment="Left" Background="#3377cc" Foreground="White"
+                Click="OutputFileOpen_Click" Margin="75,5,0,34" Grid.RowSpan="2" />
 
         <!-- ログ -->
         <TextBlock Text="ログ" Grid.Row="5" Margin="0,10,0,301" Grid.RowSpan="2"/>
