--- a/CodeMerger/MainWindow.xaml
+++ b/CodeMerger/MainWindow.xaml
@@ -48,6 +48,11 @@
                 HorizontalAlignment="Left" Background="#3377cc" Foreground="White"
                 Click="OutputFileOpen_Click" Margin="75,5,0,34" Grid.RowSpan="2" />
 
+        <Button Grid.Row="4" Content="設定" Width="60"
+                HorizontalAlignment="Left" Background="#444" Foreground="White"
+                Click="OpenSettings_Click" Margin="185,5,0,34" Grid.RowSpan="2" />  
+
+
         <!-- ログ -->
         <TextBlock Text="ログ" Grid.Row="5" Margin="0,10,0,301" Grid.RowSpan="2"/>
         <TextBox x:Name="LogTextBox" Grid.Row="6" Margin="0,5,0,0" 
